fix: long link break page width on small screens

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -97,6 +97,7 @@ p, .app-font-p {
 
 a {
   color: inherit;
+  word-wrap: break-word;
 }
 
 
